<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context=".Activities.MessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/toolbar_image_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginEnd="15dp" />


            <TextView
                android:id="@+id/toolbar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/cardview_light_background"
                android:layout_marginStart="15dp" />

            <TextView
                android:id="@+id/toolbar_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/nav_header_subtitle"
                android:textColor="@color/cardview_light_background"
                android:layout_marginStart="15dp" />

            <TextView
                android:id="@+id/toolbar_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="User"
                android:textColor="@color/cardview_light_background"
                android:layout_marginStart="15dp" />


        </androidx.appcompat.widget.Toolbar>



    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom"
        android:layout_below="@id/bar_layout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">


    </androidx.recyclerview.widget.RecyclerView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/bottom"
        android:background="@color/cardview_light_background"
        android:layout_alignParentBottom="true">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_send"
            android:background="@android:color/transparent"
            android:layout_toLeftOf="@id/btn_send"
            android:layout_centerVertical="true"
            android:hint="@string/type_a_message"
            android:layout_toStartOf="@id/btn_send"
            />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_action_name"
            android:id="@+id/btn_send"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="send" />

    </RelativeLayout>


</RelativeLayout>