<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".Fragments.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_centerHorizontal="true" />


            <TextView
                android:id="@+id/nametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:text="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@id/profile_image"      />

            <EditText
                android:id="@+id/editText_update_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/nametext"
                android:autofillHints="Name"
                android:ems="12"
                android:inputType="textPersonName"
                />

            <TextView
                android:id="@+id/surnametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:text="@string/surname"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@id/editText_update_name"

                />

            <EditText
                android:id="@+id/editText_update_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:autofillHints="Surname"
                android:layout_below="@+id/surnametext"
                android:ems="12"
                android:inputType="textPersonName"
                />

            <RadioGroup
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/radioTypeChoice"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_below="@+id/editText_update_surname">

                <RadioButton
                    android:id="@+id/ChoiceDoctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:checked="false"
                    android:text="@string/doctor"
                    />

                <RadioButton
                    android:id="@+id/ChoicePatient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:checked="false"
                    android:text="@string/patient"
                    />

            </RadioGroup>
            <TextView
                android:id="@+id/statustext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@id/radioTypeChoice"

                />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/statustext"
                android:text="@string/submit_changes"
                android:layout_centerHorizontal="true" />




        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>